--- a/package.json
+++ b/package.json
@@ -1,101 +1,112 @@
 {
-  "name": "iobroker.fb-tr-064",
-  "version": "0.1.0",
-  "description": "read Fritzbox data over TR-064",
-  "author": {
-    "name": "truegreyhound",
-    "email": "truegreyhound@gmx.net"
-  },
-  "homepage": "https://github.com/truegreyhound/ioBroker.fb-tr-064",
-  "license": "MIT",
-  "keywords": [
-    "ioBroker",
-    "fritzbox",
-    "fritz.box",
-    "fritz!box",
-    "tr-064",
-    "tr064",
-    "network",
-    "callmonitor"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/truegreyhound/ioBroker.fb-tr-064"
-  },
-  "dependencies": {
-    "@iobroker/adapter-core": "^2.2.1",
-    "@types/node-fetch": "^2.5.4",
-    "dateformat": "^3.0.3",
-    "flatted": "^2.0.1",
-    "node-fetch": "^2.6.0",
-    "request": "^2.88.0",
-    "util": "^0.12.1",
-    "xml2js": "^0.4.23"
-  },
-  "devDependencies": {
-    "@iobroker/testing": "^2.0.1",
-    "@types/chai": "^4.2.8",
-    "@types/chai-as-promised": "^7.1.2",
-    "@types/dateformat": "^3.0.1",
-    "@types/gulp": "^4.0.6",
-    "@types/mocha": "^7.0.1",
-    "@types/node": "^10.17.14",
-    "@types/proxyquire": "^1.3.28",
-    "@types/request": "^2.48.4",
-    "@types/sinon": "^7.5.1",
-    "@types/sinon-chai": "^3.2.3",
-    "@typescript-eslint/eslint-plugin": "^2.18.0",
-    "@typescript-eslint/parser": "^2.18.0",
-    "axios": "^0.19.2",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "eslint": "^6.8.0",
-    "gulp": "^4.0.2",
-    "mocha": "^7.0.1",
-    "proxyquire": "^2.1.3",
-    "rimraf": "^3.0.1",
-    "sinon": "^8.1.1",
-    "sinon-chai": "^3.4.0",
-    "source-map-support": "^0.5.16",
-    "ts-node": "^8.6.2",
-    "typescript": "^3.7.5"
-  },
-  "main": "build/main.js",
-  "scripts": {
-    "prebuild": "rimraf ./build",
-    "build:ts": "tsc -p tsconfig.build.json --listEmittedFiles",
-    "build": "npm run build:ts",
-    "watch:ts": "tsc -p tsconfig.build.json --watch",
-    "watch": "npm run watch:ts",
-    "test:ts": "mocha --opts test/mocha.custom.opts",
-    "test:package": "mocha test/package --exit",
-    "test:unit": "mocha test/unit --exit",
-    "test:integration": "mocha test/integration --exit",
-    "test": "npm run test:ts && npm run test:package",
-    "lint": "eslint --ext .ts src"
-  },
-  "nyc": {
-    "include": [
-      "src/**/*.ts"
-    ],
-    "exclude": [
-      "src/**/*.test.ts"
-    ],
-    "extension": [
-      ".ts"
-    ],
-    "require": [
-      "ts-node/register"
-    ],
-    "reporter": [
-      "text-summary",
-      "html"
-    ],
-    "sourceMap": true,
-    "instrument": true
-  },
-  "bugs": {
-    "url": "https://github.com/truegreyhound/ioBroker.fb-tr-064/issues"
-  },
-  "readmeFilename": "README.md"
+	"name": "iobroker.fb-tr-064",
+	"version": "1.0.1",
+	"description": "read Fritzbox data over TR-064",
+	"author": {
+		"name": "truegreyhound",
+		"email": "truegreyhound@gmx.net"
+	},
+	"homepage": "https://github.com/truegreyhound/ioBroker.fb-tr-064",
+	"license": "MIT",
+	"keywords": [
+		"ioBroker",
+		"fritzbox",
+		"fritz.box",
+		"tr-064",
+		"tr064",
+		"network",
+		"netmon"
+	],
+	"repository": {
+		"type": "git",
+		"url": "ssh://git@influx-01.fritz.box/var/git/repos/pub/ioBroker/adapter/fb-tr-064.git/"
+	},
+	"repositoryXX": {
+		"type": "git",
+		"url": "https://github.com/truegreyhound/ioBroker.fb-tr-064"
+	},
+	"main": "build/main.js",
+	"dependencies": {
+		"@iobroker/adapter-core": "^2.2.1",
+		"arg": "^4.1.3",
+		"flatted": "^2.0.1",
+		"node-fetch": "^2.6.0",
+		"dateformat": "^3.0.3",
+		"request": "^2.88.0",
+		"util": "^0.12.1",
+		"xml2js": "^0.4.23"
+	},
+	"devDependencies": {
+		"@iobroker/testing": "^2.0.1",
+		"@types/chai": "^4.2.8",
+		"@types/chai-as-promised": "^7.1.2",
+		"@types/dateformat": "^3.0.1",
+		"@types/gulp": "^4.0.6",
+		"@types/mocha": "^7.0.1",
+		"@types/node": "^10.17.14",
+		"@types/proxyquire": "^1.3.28",
+		"@types/request": "^2.48.4",
+		"@types/sinon": "^7.5.1",
+		"@types/sinon-chai": "^3.2.3",
+		"@typescript-eslint/eslint-plugin": "^2.18.0",
+		"@typescript-eslint/parser": "^2.18.0",
+		"@types/node-fetch": "^2.5.4",
+		"axios": "^0.19.2",
+		"chai": "^4.2.0",
+		"chai-as-promised": "^7.1.1",
+		"eslint": "^6.8.0",
+		"gulp": "^4.0.2",
+		"mocha": "^7.0.1",
+		"proxyquire": "^2.1.3",
+		"rimraf": "^3.0.1",
+		"sinon": "^8.1.1",
+		"sinon-chai": "^3.4.0",
+		"source-map-support": "^0.5.16",
+		"ts-node": "^8.6.2",
+		"typescript": "^3.7.5"
+	},
+	"scripts": {
+		"prebuild": "rimraf ./build",
+		"build:ts": "tsc -p tsconfig.build.json --listEmittedFiles",
+		"build": "npm run build:ts",
+		"watch:ts": "tsc -p tsconfig.build.json --watch",
+		"watch": "npm run watch:ts",
+		"test:ts": "mocha --opts test/mocha.custom.opts",
+		"test:package": "mocha test/package --exit",
+		"test:unit": "mocha test/unit --exit",
+		"test:integration": "mocha test/integration --exit",
+		"test": "npm run test:ts && npm run test:package",
+		"format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+		"lint": "eslint --ext .ts src"
+	},
+	"directories": {
+		"test": "test"
+	},
+	"nyc": {
+		"include": [
+			"src/**/*.ts"
+		],
+		"exclude": [
+			"src/**/*.test.ts"
+		],
+		"extension": [
+			".ts"
+		],
+		"require": [
+			"ts-node/register"
+		],
+		"reporter": [
+			"text-summary",
+			"html"
+		],
+		"sourceMap": true,
+		"instrument": true
+	},
+	"bugs": {
+		"url": "https://github.com/truegreyhound/ioBroker.fb-tr-064/issues"
+	},
+	"readmeFilename": "README.md",
+	"files": [
+		"build/**/*"
+	]
 }
