--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "iobroker.fb-tr-064",
-	"version": "1.0.1",
+	"version": "0.3.3",
 	"description": "read Fritzbox data over TR-064",
 	"author": {
 		"name": "truegreyhound",
@@ -29,9 +29,10 @@
 	"dependencies": {
 		"@iobroker/adapter-core": "^2.2.1",
 		"arg": "^4.1.3",
-		"flatted": "^2.0.1",
-		"node-fetch": "^2.6.0",
 		"dateformat": "^3.0.3",
+		"flatted": "^2.0.1",
+		"jshint": "^2.12.0",
+		"node-fetch": "^2.6.1",
 		"request": "^2.88.0",
 		"util": "^0.12.1",
 		"xml2js": "^0.4.23"
@@ -41,16 +42,16 @@
 		"@types/chai": "^4.2.8",
 		"@types/chai-as-promised": "^7.1.2",
 		"@types/dateformat": "^3.0.1",
-		"@types/gulp": "^4.0.6",
+		"@types/gulp": "^4.0.7",
 		"@types/mocha": "^7.0.1",
 		"@types/node": "^10.17.14",
+		"@types/node-fetch": "^2.5.4",
 		"@types/proxyquire": "^1.3.28",
 		"@types/request": "^2.48.4",
 		"@types/sinon": "^7.5.1",
 		"@types/sinon-chai": "^3.2.3",
 		"@typescript-eslint/eslint-plugin": "^2.18.0",
 		"@typescript-eslint/parser": "^2.18.0",
-		"@types/node-fetch": "^2.5.4",
 		"axios": "^0.19.2",
 		"chai": "^4.2.0",
 		"chai-as-promised": "^7.1.1",
@@ -77,7 +78,7 @@
 		"test:integration": "mocha test/integration --exit",
 		"test": "npm run test:ts && npm run test:package",
 		"format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-		"lint": "eslint --ext .ts src"
+		"lint": "tslint --ext .ts src"
 	},
 	"directories": {
 		"test": "test"
