--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,9 +3,11 @@
 	// Modified config to only compile .ts-files in the src dir
 	"compilerOptions": {
 		"noEmit": false,
+		"allowJs": false,
+		"checkJs": false,
 
-		"declaration": false,
-		"rootDir": "./src"
+		"declaration": false	//,
+//		"rootDir": "./src"
 	},
 	"include": [
 		"src/**/*.ts"
