--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,5 +48,9 @@
 				"sort": 0
 			}
 		]
-	}
+	},
+	"prettier.singleQuote": true,
+	"prettier.jsxSingleQuote": true,
+	"typescript.preferences.quoteStyle": "single",
+	"javascript.preferences.quoteStyle": "single"
 }
