--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,4 @@
+// Root tsconfig to set the settings and power editor support for all TS files
 {
 	"compileOnSave": true,
 	"compilerOptions": {
@@ -9,11 +10,13 @@
 		"allowJs": true,
 		"checkJs": true,
 
+		"skipLibCheck": true, // Don't report errors in 3rd party definitions
 		"noEmitOnError": true,
 		"outDir": "./build/",
 		"removeComments": false,
 		"module": "commonjs",
 		"moduleResolution": "node",
+		"esModuleInterop": true,
 		// this is necessary for the automatic typing of the adapter config
 		"resolveJsonModule": true,
 
@@ -32,13 +35,14 @@
 		// Consider targetting es2017 or higher if you require the new NodeJS 8+ features
 		"target": "es2017",
 
-		"sourceMap": true,
-		//"rootDir": ".",
+		"sourceMap": false,
 		"inlineSourceMap": false,
 		"watch": false
 	},
 	"include": [
-		"**/*.ts", "**/*.d.ts"
+		"src/**/*.ts",
+		"admin/**/*.ts",
+		"admin/**/*.tsx"
 	],
 	"exclude": [
 		"build/**",
